added links and replaced lorem

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 						<ul>
 							<li class="navList"><a class="simpleSmall" href="#">Home</a></li>
 							<li class="navList"><a class="simpleSmall" href="#about">About Us</a></li>
-							<li class="navList"><a class="simpleSmall" href="#">Menu</a></li>
-							<li class="navList"><a class="simpleSmall" href="#">Order Now</a></li>
+							<li class="navList"><a class="simpleSmall" href="#menu">Menu</a></li>
+							<li class="navList"><a class="simpleSmall" href="#menu">Order Now</a></li>
 							<li class="navList"><a class="simpleSmall" href="#">Blog</a></li>
-							<li class="navList"><a class="simpleSmall" href="#">Location</a></li>							
+							<li class="navList"><a class="simpleSmall" href="#reviews">Reviews</a></li>							
 						</ul>
 						<ul class="navIcons">
 							<li class="navList"><a href=""><i class="material-icons">shopping_cart</i></a></li>
@@ -38,9 +38,9 @@
 				</header>
 				<section class="grid-1">
 					<h1 class="bigFancy">
-						Welcome 
-						To Our Cuisine
-						Restaurant</h1>
+						Proof's Cafè
+						&
+						Bakery</h1>
 					<input type="text" id="search" placeholder="Search here">
 					<a class="btn" href="">Location</a>
 					<section class="social">
@@ -56,16 +56,16 @@
 			<section id="about" class="smallPanel grid-2">
 				<section class="box-2-1">
 					<span class="preHeading">About Us</span>
-					<h2 class="bigFancy">Discover Our Restaurant Story</h2>
-					<p class="simpleText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto provident qui esse neque. Ipsam optio consectetur debitis dignissimos, corporis pariatur! Assumenda sapiente, ea ipsum doloribus possimus quod in voluptas fugiat odio! Tenetur alias natus nesciunt aperiam sit officiis velit iste. Eos beatae ex corrupti quae perferendis veniam laborum blanditiis possimus.</p>
-					<p class="simpleText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam repellendus officiis inventore placeat eius consectetur! Voluptatum adipisci dicta laboriosam magnam?</p>
+					<h2 class="bigFancy">Discover Our Family History</h2>
+					<p class="simpleText">What started out as a small cafe run by my parents in 1995 has blossomed into the successful business that it is today. We strive to bring the best food, best service, and the best time to all of our customers. We offer a wide variety of foods with vegan and vegetarian dishes that are sure to please. Whether you dine in or are having your party catered, we can assure that you will not leave disappointed.</p>
+					<p class="simpleText">Please be sure to let us know if you have any food allergies. We will gladly make any accomodation that you might need. Substitutions are no problem at all with each dish made fresh to order.</p>
 					<a class="btn" href="#">Discover Menu<i class="material-icons">arrow_forward</i></a>
 				</section>
 			</section>	
 	<!-- ==============================================
 	PORTFOLIO
 	================================================-->
-			<section class="clear grid-3">
+			<section id="menu" class="clear grid-3">
 				<span class="preHeading">Order Online Now</span>
 				<h3 class="bigFancy">Our Specialty Cuisine</h3>
 				<ul class="clearfix">
@@ -108,20 +108,20 @@
 	<!-- ==========================================
 	STORE HOURS 
 	========================================== -->
-			<section class="clear grid-4">
+			<section id="hours" class="clear grid-4">
 				<span class="preHeading">Book Table</span>
-				<h3 class="bigFancy">Opening Hours</h3>
+				<h3 class="bigFancy">Store Hours</h3>
 				<i class="material-icons phone">call</i>
 				<span class="simpleSmall">Call Now</span>
-				<span class="phone">+12345 678 910</span>
+				<span class="phone">+555 632 5378</span>
 				<section class="hoursBox">
 					<section class="storeHours">
 						<span class="simpleSmall">Monday to Tuesday</span>
-						<span class="hours">09:00am - 22:00 pm</span>
+						<span class="hours">09:00am - 11:00 pm</span>
 					</section><!--
 					--><section class="storeHours">
 						<span class="simpleSmall">Friday to Sunday</span>
-						<span class="hours">11:00 am - 20:00 pm</span>
+						<span class="hours">11:00 am - 8:00 pm</span>
 					</section>
 				</section>	
 				<section class="videoBox">
@@ -132,14 +132,14 @@
 	<!-- =======================================
 	REVIEWS
 	======================================= -->
-			<section class="grid-5">
+			<section id="reviews" class="grid-5">
 				<span class="preHeading">Testimonials</span>
 				<h4 class="bigFancy">Customers Say</h4>
 				<div class="review"></div>
-				<span class="reviewName">Mr John Smith</span>
+				<span class="reviewName">Lucy Isaan</span>
 				<span>Art Director</span>
 				<img src="#" alt="">
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nostrum qui in pariatur, eligendi eveniet perspiciatis delectus facilis, officia expedita ducimus at dolorum, tempora sequi. Iure obcaecati est dolorum omnis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt laudantium veritatis accusamus sunt explicabo doloremque amet dolorum voluptates! Quo ullam doloribus, excepturi minima magni id!</p>
+				<p>I'm not one to typically write reviews, but I feel like I have to. I went to my best friend's wedding in May. She had the whole thing catered by Proof's. Everything was absolutely incredible. Even when it was catered, everything was made to order. There was a beautiful grazing table set up with charcuterie boards for each table. Not only did everyone leave absolutely stuffed, but they even had "to-go" boxes packed up for the people that were working the wedding. Hands down, the best experience I have ever had. </p>
 			</section>
 
 		</div>
